--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ app.*.map.json
 /android/app/google-services.json
 /ios/firebase_app_id_file.json
 /ios/Runner/GoogleService-Info.plist
+
+# firebase_options.dart 除外
+/lib/firebase_options.dart
